Fixed navigation scrollbar being visible.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -72,7 +72,15 @@ body.prompt {
 	border-bottom: 2px dashed #FFF7C0;
 	background-color: #484d54;
 
-	overflow: scroll;
+	overflow-x: visible;
+	overflow-y: scroll;
+
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+}
+.navigation::-webkit-scrollbar {
+	width: 0;
+	height: 0;
 }
 
 .navigation .inside {
